--- a/src/components/EraYearComponent.css
+++ b/src/components/EraYearComponent.css
@@ -26,6 +26,11 @@ h2 {
     font-size: 24px;
 }
 
+.form-align {
+  margin-bottom: -10rem !important;
+  height: 50%;
+}
+
 .form-label {
     color: #ffffff;
     font-weight: bold;
